--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -98,6 +98,25 @@
       .checkbox-container input {
         margin-right: 8px;
       }
+      .settings-container {
+        background: #f9f9f9;
+        border: 1px solid #ddd;
+        border-radius: 4px;
+        padding: 8px;
+        margin: 12px 0;
+      }
+      .settings-row {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin: 8px 0;
+      }
+      .time-input {
+        width: 60px;
+        padding: 4px;
+        border-radius: 4px;
+        border: 1px solid #ddd;
+      }
     </style>
   </head>
   <body>
@@ -120,6 +139,22 @@
       <input type="checkbox" id="preferHTML" />
       <label for="preferHTML">Use HTML content when available</label>
     </div>
+
+    <div class="settings-container">
+      <div class="section-title">Auto-Close Settings</div>
+      <div class="checkbox-container">
+        <input type="checkbox" id="autoCloseEnabled" />
+        <label for="autoCloseEnabled">Auto-close Claude tab</label>
+      </div>
+      <div class="settings-row">
+        <label for="autoCloseDelay">Close after:</label>
+        <div>
+          <input type="number" id="autoCloseDelay" class="time-input" min="1" max="60" value="3" />
+          <span>minutes</span>
+        </div>
+      </div>
+    </div>
+
     <button id="executeBtn" class="button">Execute Automation</button>
     <div class="shortcut-info">
       <strong>Keyboard Shortcut:</strong><br />
